--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- CSS Externo -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- Preloader -->
@@ -1205,7 +1205,7 @@
             </div>
 
             <!-- JavaScript Externo -->
-            <script src="js/main.js"></script>
+            <script src="./js/main.js"></script>
             
             <!-- Script adicional para el formulario -->
             <script>
