--- a/index.html
+++ b/index.html
@@ -1204,7 +1204,7 @@
             </div>
 
             <!-- JavaScript Externo -->
-            <script src="./js/main.js"></script>
+            <script src="js/main.js"></script>
             
             <!-- Script adicional para el formulario -->
             <script>
