--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta name="twitter:description" content="Framework FORJA®: Transformación empresarial en 6 meses">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://forjadigitalae.github.io/LOGO%20favicon.png">
+    <link rel="icon" type="image/png" href="https://github.com/forjadigitalae/forjadigitalae/blob/main/LOGO%20favicon.png">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lato:wght@300;400;600;700&display=swap" rel="stylesheet">
