--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
                                 <p style="color: var(--azul-secundario); margin-bottom: 15px; font-weight: 600; font-size: 0.95rem;">¿Cuál es tu principal desafío empresarial? (Selección múltiple)</p>
                                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px 15px;">
                                     <label style="color: var(--azul-secundario);"><input type="checkbox" name="desafio" value="Escalabilidad" style="margin-right: 8px;"> Escalabilidad (no puedo crecer más)</label>
-                                    <label style="color: var(--azul-secundario);"><input type="checkbox" name="desafio" value="Procesos ineficientes" style="margin-right: 8px;"> Procesos ineficientes (tiempo perdido)</label>
+                                    <label style="color: var(--azul-secundario);"><input type="checkbox" name="desafio" value="Procesos ineficientes" style="margin-right: 8px;"> Procesos ineficientes</label>
                                     <label style="color: var(--azul-secundario);"><input type="checkbox" name="desafio" value="Tecnología desactualizada" style="margin-right: 8px;"> Tecnología desactualizada</label>
                                     <label style="color: var(--azul-secundario);"><input type="checkbox" name="desafio" value="Dependencia del fundador" style="margin-right: 8px;"> Dependencia del fundador</label>
                                     <label style="color: var(--azul-secundario);"><input type="checkbox" name="desafio" value="Falta de automatización" style="margin-right: 8px;"> Falta de automatización</label>
