--- a/index.html
+++ b/index.html
@@ -1334,6 +1334,18 @@
             </div>
         </div>
         <!-- JavaScript Externo -->
-    <script src="./js/main.js"></script>
+        <script src="./js/main.js"></script>
+
+        <!-- BOTÓN FLOTANTE DE WHATSAPP CON TOOLTIP -->
+        <div class="whatsapp-container">
+            <a href="https://wa.me/573142365590?text=Hola%20ForjaDigitalAE%2C%20me%20gustaría%20conocer%20más%20sobre%20sus%20servicios" 
+               class="whatsapp-float" 
+               target="_blank"
+               aria-label="Contactar por WhatsApp"
+               rel="noopener noreferrer">
+                <i class="fab fa-whatsapp"></i>
+                <span class="whatsapp-tooltip">¿Necesitas ayuda? ¡Escríbenos!</span>
+            </a>
+        </div>
     </body>
 </html>
