--- a/index.html
+++ b/index.html
@@ -1347,5 +1347,51 @@
                 <span class="whatsapp-tooltip">¿Necesitas ayuda? ¡Escríbenos!</span>
             </a>
         </div>
+
+        <!-- Script del formulario -->
+        <script src="main.js"></script>
+        
+        <!-- Botón flotante de WhatsApp -->
+        <a href="https://wa.me/573142365590?text=Hola%20ForjaDigitalAE%2C%20me%20gustaría%20conocer%20más%20sobre%20sus%20servicios" 
+           class="whatsapp-float" 
+           target="_blank"
+           aria-label="Contactar por WhatsApp"
+           rel="noopener noreferrer">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+
+        // Personalización adicional
+        Tawk_API.customStyle = {
+            visibility : {
+                desktop : {
+                    position : 'br', // bottom-right
+                    xOffset : 30, // 30px desde la derecha
+                    yOffset : 110 // 110px desde abajo (arriba de WhatsApp)
+                },
+                mobile : {
+                    position : 'br',
+                    xOffset : 20,
+                    yOffset : 90
+                }
+            }
+        };
+
+        // Ocultar el widget en ciertas páginas (si es necesario)
+        // Tawk_API.hideWidget();
+
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/68f199687d1ba0194f933c2d/1j7nrug2r';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+        </script>
+        <!--End of Tawk.to Script-->
     </body>
 </html>
