--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                 </li>
             </ul>
             
-            <a href="#contacto" class="cta-button">
+            <!--<a href="#contacto" class="cta-button">
                 <i class="fas fa-user-tie"></i>
                 Habla con un Forjador
                 <div class="particle" style="top: 20%; left: 10%; animation-delay: 0s;"></div>
                 <div class="particle" style="top: 60%; left: 80%; animation-delay: 0.5s;"></div>
                 <div class="particle" style="top: 30%; left: 50%; animation-delay: 1s;"></div>
-            </a>
+            </a> -->
                         
             <div class="mobile-menu-toggle" id="mobileToggle">
                 <i class="fas fa-bars"></i>
