--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
             </div>
             </div>
 
-             Mensaje de Éxito -->
+             <!-- Mensaje de Éxito -->
             <div id="successMessage" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 40px; border-radius: 15px; box-shadow: 0 20px 40px rgba(0,0,0,0.2); z-index: 10004; max-width: 500px; text-align: center;">
                 <div style="width: 100px; height: 100px; background: linear-gradient(135deg, #4CAF50, #45a049); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
                     <i class="fas fa-check" style="color: white; font-size: 2.5rem;"></i>
