--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
                     </div>
                 </div>
 
-        <!-- <div id="successMessage" class="modal">
+        <div id="successMessage" class="modal">
             <div class="modal-content" style="max-width: 500px; text-align: center; padding: 40px; border-radius: 15px;">
                 <i class="fas fa-check-circle" style="font-size: 3rem; color: var(--turquesa-digital); margin-bottom: 15px;"></i>
                 <h3 style="color: var(--azul-marino); margin-bottom: 10px;">¡Solicitud Recibida!</h3>
@@ -966,7 +966,7 @@
                     Cerrar
                 </button>
             </div>
-        </div> -->
+        </div>
 
         <div id="privacyPolicyModal" class="modal">
             <div class="modal-content" style="max-width: 700px; padding: 40px; text-align: left; background: #f8f9fa; max-height: 90vh; overflow-y: auto;">
@@ -1018,7 +1018,7 @@
                 </div>
                 <h3 style="color: #27325A; margin-bottom: 15px;">¡Solicitud Enviada con Éxito!</h3>
                 <p style="color: #33487A; margin-bottom: 25px;">
-                    Un Forjador se contactará contigo en menos de 2 horas.
+                    Un Forjador se contactará contigo en menos de 2 días.
                 </p>
                 <button onclick="closeSuccessMessage()" style="background: #4CCED5; color: white; border: none; padding: 12px 25px; border-radius: 25px; font-weight: 600; cursor: pointer;">
                     Continuar Navegando
