--- a/evaluacion/index.html
+++ b/evaluacion/index.html
@@ -662,6 +662,14 @@
                 </div>
             </div>
 
+            <!-- NUEVO: Sección de Benchmarking -->
+            <div class="card mt-8">
+                <div class="card-body">
+                    <h2 class="text-h2 mb-6">🏆 Análisis Competitivo de Mercado</h2>
+                    <div id="benchmarkContainer"></div>
+                </div>
+            </div>
+
             <!-- CTA Final -->
             <div class="card mt-8 cta-final-card">
                 <div class="card-body text-center">
@@ -678,6 +686,8 @@
     </section>
 
     <!-- JavaScript Externo -->
+    <script src="benchmarkData.js"></script>
+    <script src="benchmarkCalculations.js"></script>
     <script src="evaluacion-script.js"></script>
 </body>
 </html>
